todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: header-image
          persistentVolumeClaim:
            claimName: todo-image-claim
      containers:
        - name: todo-app
          image: todo-app
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: header-image
              mountPath: /usr/src/todo-app/header-image
