todo-app/manifests/todo-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      volumes:
        - name: header-image
          persistentVolumeClaim:
            claimName: todo-image-claim
      containers:
        - name: todo-frontend
          image: todo-frontend
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: header-image
              mountPath: /usr/src/todo-frontend/header-image
