todo-app/manifests/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - name: http
      protocol: TCP
      port: 2345 # cluster-visible port used by TODO_BACKEND_URL
      targetPort: 3000 # the port the container listens on
